--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Girly landingpage</title>
+  <title>Trivia Tonight</title>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -70,8 +70,8 @@
     <a href="index.html" title="To Top">
                  <span class="glyphicon glyphicon-chevron-up"></span>
                </a>
-    <p>created by Adam Smith</p>
-    <p>&copy; 2017 My Company Bitches, Inc.</p>
+    <p>Created by Adam Smith</p>
+    <p>&copy;2018 My Company Bitches, Inc.</p>
   </footer>
 
   <script>
