--- a/index.html
+++ b/index.html
@@ -15,36 +15,31 @@
   <link rel="stylesheet" href="css/main.css">
 
   <!-- FONTS   -->
-  <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
-
-
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Source+Sans+Pro" rel="stylesheet">
 </head>
 
-<body background="img/mountains.jpg">
+<body background="img/bar.jpg">
 
-  <div id="everything" class="container-fluid">
-    <div id="top">
-      <h1>So pretty and girly</h1>
+  <div id="everything" class="everything container-fluid">
+    <div class="top "id="top">
+      <h1>If you've reached this page, you must love trivia..</h1>
 
     </div>
     <div class="row">
-      <div class="col-sm-6" id="main-left">
-        <h1>Welcome to my page!</h1>
-        <h2>This shit is underconstruction!</h2>
+      <div class="main-left col-sm-6" id="main-left">
+        <h1>TRIVIA</h1>
+        <h1>BEER &</h1>
         <h3>Pumpkin spice & leggings</h3>
         <h3>LINKS TO SOCIAL MEDIA SOON</h3>
         <!-- <i class="fa fa-pinterest-square fa-2x" aria-hidden="true"></i> -->
         <!-- <i class="fa fa-pinterest-square fa-2x" aria-hidden="true"></i> -->
 
       </div>
-      <div class="col-sm-6" id="main-right">
+      <div class="main-right col-sm-6" id="main-right">
         <p>
-          Whatever cray vinyl, skateboard hashtag schlitz keytar
-          church-key direct trade actually brooklyn +1 pour-over woke.
-          Chartreuse put a bird on it iPhone af tumblr beard quinoa vape
-          ramps mustache copper mug fam 90's intelligentsia mumblecore.
-          La croix unicorn lyft cred.
+          Our goal is to create a way for everyone to be able to go to trivia every night, 
+          in whatever city they may be. We need you're help to create this awesome list! 
+          If you like what we're doing get your local bars to sign up!
         </p>
         <h3>
         I hope to get this shit up and running in:
@@ -54,10 +49,10 @@
         </h1>
       </div>
     </div>
-    <div id="bottom">
+    <div class="bottom" id="bottom">
       <h3>Please enter email to get updates!</h3>
     </div>
-    <div id="sub">
+    <div class="sub" id="sub">
       <form action="mailto:adam@duckysmith.com" method="post" enctype="text/plain">
         <input type="text" name="FirstName"><br>
         <input type="submit" value="Submit">
